Added field editing and deletion.  Working on the same for categories.

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,8 @@ TODO
 
 Fields
 ======
-Editing
+Only have the values and size fields visible when the appropriate type is selected
+Nicer display on delete
 
 Categories
 ==========
