--- a/TODO.txt
+++ b/TODO.txt
@@ -3,12 +3,14 @@ TODO
 Fields
 ======
 
+
 Categories
 ==========
-
+When option is chosen in 'multiple' field, text box should take that value
 
 Items
 =====
+Image Uploads
 Editing
 Deleting
 Alerts
