Sends user to admin side of item after adding item instead of display side.

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,9 +9,9 @@ Categories
 Items
 =====
 Alerts
+Add support for adding remote files (ie. for a move, the user could add the picture from an amazon.com listing without downloading and uploading)
 
 BEFORE NEXT RELEASE
 ===================
-Search function
 Instructions for use
 
