--- a/TODO.txt
+++ b/TODO.txt
@@ -10,8 +10,10 @@ Items
 =====
 Alerts
 Add support for adding remote files (ie. for a move, the user could add the picture from an amazon.com listing without downloading and uploading)
+Check path in item_class (images appearing in delete item page)
 
 BEFORE NEXT RELEASE
 ===================
 Instructions for use
-
+Fix search so it works for all field types
+Allow searching within category
