--- a/TODO.txt
+++ b/TODO.txt
@@ -1,20 +1,28 @@
-TODO
+BEFORE 1.1
+===================
+Searching within categories
 
-Fields
-======
+BEFORE 1.2
+===================
+Remote files
+All files commented
 
-Categories
-==========
+BEFORE 1.3
+===================
+Searching within multiple categories
 
-Items
-=====
+BEFORE 1.4
+===================
 Alerts
-Add support for adding remote files (ie. for a move, the user could add the picture from an amazon.com listing without downloading and uploading)
+
+BEFORE 1.5
+===================
 Labels
 
-Search
-======
-Allow searching within category
-
-BEFORE NEXT RELEASE
+BEFORE 1.6
 ===================
+Better advanced search, like phpMyAdmin
+
+BEFORE 1.7
+===================
+Internal password protection
