--- a/TODO.txt
+++ b/TODO.txt
@@ -9,8 +9,7 @@ DONE - All files commented
 
 BEFORE 1.3
 ===================
-Get more information out of remote files
-Searching within multiple categories
+DONE - Searching within multiple categories
 
 BEFORE 1.4
 ===================
@@ -22,8 +21,10 @@ Labels
 
 BEFORE 1.6
 ===================
+Thumbnails of remote images
 Better advanced search, like phpMyAdmin
 
 BEFORE 1.7
 ===================
+Get more information out of remote files
 Internal password protection
