--- a/TODO.txt
+++ b/TODO.txt
@@ -25,7 +25,7 @@ DONE - Labels
 BEFORE 1.6
 ===================
 CHRIS - Timed Alerts
-Thumbnails of remote images (I'm not sure if this can actually be done.)
+DREW - Thumbnails of remote images (I'm not sure if this can actually be done.)
 Better advanced search, like phpMyAdmin's Search page
 
 BEFORE 1.7
