--- a/TODO.txt
+++ b/TODO.txt
@@ -45,3 +45,4 @@ BUGS
 ========================================
 FIXED - When a remote file's URL is too long, it stretches the page
 FIXED - The category drop down returns with the last item selected instead of the first
+When you try to move a category to one of its subcategories, the page times out, probably due to some infinite loop.  The fix should be: A category cannot be moved to a subcategory of itself, unless you can think of a better fix.
