Fixxed bug when trying to move a category to its own subcategory

--- a/TODO.txt
+++ b/TODO.txt
@@ -40,7 +40,12 @@ CHRIS - Item associations ("Item" Field type)
 BEFORE 1.9
 ===================
 Label Sheets
+Download inventory as XML file
+
+BEFORE 2.0
+===================
+Upload inventory as XML file
 
 BUGS
 ========================================
-CHRIS - When you try to move a category to one of its subcategories, the page times out, probably due to some infinite loop.  The fix should be: A category cannot be moved to a subcategory of itself, unless you can think of a better fix.
+FIXED - When you try to move a category to one of its subcategories, the page times out, probably due to some infinite loop.  The fix should be: A category cannot be moved to a subcategory of itself, unless you can think of a better fix.
