--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,11 +1,42 @@
-Added item associations
-Added WYSIWYG editor for long text fields
-Added multiple language support
-Added alert expiration
-Adding XML export of inventory
-Added code to remove the extra ", " at the end of the item teaser.
-Added code so that item teaser now truncates with an ellipsis (...) instead of just getting cut off.
-Changed the item table into two tables, one to track items and another for the field values
-Added exits after header redirects
-Added Spanish translation, thanks to Isaac Uribe
-Added French translation, thanks to Cedric Arrabie
+BUG FIXES
+===========================================================================
+Fixed bug where first item or category in an alert would never be deleted
+Added anyInventory_values table to install file
+Fixed alignment for checkbox field names
+Suppressed all unlinks
+Fixed search page
+Fixed colspan error
+Fixed bug where all items in an item field would be selected by default
+Fixed some of the XML stuff
+
+CHANGES
+===========================================================================
+Changed limit for input/WYSIWYG to 255 instead of 64
+Changed <item category= to <item name=
+Rewrote category deletion code
+Rewrote file deletion code
+Rewrote item deletion code
+Rewrote category deletion code
+
+NEW FEATURES
+===========================================================================
+Added table view
+Added label sheets
+Added Cancel buttons on edit pages
+Added more notices to the README about permissions
+Added default view config value
+
+LANGUAGE
+===========================================================================
+Fixed French spellings, replaced Labels text with LABELS
+Set default language to English
+Added German language
+
+DOCUMENTATION
+===========================================================================
+Added German documentation placeholders
+Added link back to add item page from documentation
+Changed sample label to Shrek
+
+
+
